--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -1,10 +1,10 @@
-.Header {
+.Toolbar {
     height: 56px;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    background-color: tomato;
+    background-color: #012549;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -13,13 +13,14 @@
     z-index: 90;
 }
 
-.Header nav {
+.Toolbar nav {
     height: 100%;
 }
 
 .Logo {
     height: 80%;
 }
+
 
 @media (max-width: 499px) {
     .DesktopOnly {
